archive/infrastructure/deployments/interface-deployment/staging/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: interface-stg
  namespace: interface-stg
  labels:
    app: interface-stg
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: interface-stg
